Added doughnut chart to dashboard, added meta data in message.properties, adjusted chart data in admin\dashboard.html

--- a/spring-boot/admin/src/main/resources/messages.properties
+++ b/spring-boot/admin/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ admin.dashboard.stats.errors.desc=Number of API calls failed in the selected dat
 admin.dashboard.stats.http.response.codes.desc=HTTP response codes in the selected date range.
 admin.dashboard.num.errors.desc=Total amount of errors in the selected date range.
 admin.dashboard.stats.calls.api.user.desc=Calls api user in the selected date range.
+admin.dashboard.stats.calls.per.service.desc=Shows the number of calls per service in the selected data-range
 admin.dashboard.top.api.users.desc=Top Api users in the selected date range.
 admin.dashboard.total.number.calls.desc=Total number of calls in the selected date range.
 admin.dashboard.total.revenue.desc=Total revenue in the selected date range.
